# simson

./: CITATION.cff  pyproject.toml  run_simson.py  simson.py  simson_cement.py  simson_plastics.py  simson_steel.py
.github/workflows/: main_actions.yml
config/: cement.yml  plastics.yml  steel.yml
data/plastics/input/datasets/: bio_production_rate.csv  carbon_content_materials.csv  chemical_recycling_rate.csv  daccu_production_rate.csv  emission_capture_rate.csv  gdppc.csv  incineration_rate.csv  lifetime_mean.csv  lifetime_std.csv  material_shares_in_goods.csv  mechanical_recycling_rate.csv  mechanical_recycling_yield.csv  population.csv  production.csv  reclmech_loss_uncontrolled_rate.csv  solvent_recycling_rate.csv
data/plastics/input/dimensions/: goods_in_use.csv  historic_years.csv  materials.csv  regions.csv  (+1 more)
simson/cement/: cement_definition.py  cement_export.py  cement_mfa_system_future.py  cement_mfa_system_historic.py  cement_model.py
simson/common/: assumptions_doc.py  base_model.py  common_cfg.py  common_export.py  custom_data_reader.py  custom_export.py  data_extrapolations.py  data_transformations.py  stock_extrapolation.py  trade.py  trade_balancers.py  trade_extrapolation.py  trade_predictors.py
simson/plastics/: plastic_model.py  plastics_definition.py  plastics_export.py  plastics_mfa_system.py  plastics_model.py
simson/steel/: inflow_driven_historic_steel.py  inflow_driven_steel_historic.py  steel_definition.py  steel_export.py  steel_mfa_system_future.py  steel_mfa_system_historic.py  steel_model.py  steel_trade_model.py  stock_driven_steel.py
