[tool.poetry]
name = "mofa"
version = "0.1.0"
description = ""
authors = ["Jakob Duerrwaechter <jakob.duerrwaechter@pik-potsdam.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.7.1,!=3.9.1"
numpy = "^1.25.0"
scipy = "^1.11.0"
PyYAML = "^6.0"
statsmodels = "^0.14.0"
pandas = "^2.0.2"
pickle4 = "^0.0.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
plotly = "^5.18.0"
sodym = { path = "../sodym/", develop = true }
pydantic = "^2.8.2"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
